# ModelWorldSME

./: LICENSE  PHILOSOPHY.md  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml  vhs.yml
docs/: index.html
examples/: demo_run.py  terminal_example.py
model_world_sme/: __init__.py
model_world_sme/adapters/: __init__.py  anthropic.py  base.py  google.py  mistral.py  ollama.py  openai.py
model_world_sme/core/: __init__.py  autonomy.py  cdm.py  export.py  laddering.py  matching.py  report.py
model_world_sme/interview/: __init__.py  flow.py  questions.py
model_world_sme/orchestrators/: __init__.py  autogen.py  base.py  hermes.py  langchain.py  standalone.py
scripts/: generate_compliance_tasks.py  generate_compliance_tasks_v2.py  generate_demo_gif.py  generate_demo_svg.py
tests/: test_core.py
worldmodel/: ModelWorldSME stap 2.txt  Upgrade database SME compliance.txt  index_text_changes.md
